--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>DJCRM</title>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    {% include "navbar.html" %}
-    {% block content %}
-    {% endblock content %}
+    <div class="max-w-7xl mx-auto">
+        {% include "navbar.html" %}
+        {% block content %}
+        {% endblock content %}
+    </div>
+    {% include "scripts.html" %}
 </body>
 </html>
