--- a/agents/templates/agents/agent_delete.html
+++ b/agents/templates/agents/agent_delete.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <a href="{% url 'agents:agent-list' %}">Go back to all agents</a>
-    <hr/>
-    <h1>Are you sure you want to delete this agent?</h1>
-    <form method="post" action=".">
+<div class="max-w-lg mx-auto">
+    <a href="{% url 'agents:agent-list' %}">
+        Go back to all agents
+    </a>
+    <h1 class="text-2xl text-gray-800">
+        Are you sure you want to delete this agent?
+    </h1>
+    <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
+        {{ form|crispy }}
+        <button type="submit" class="w-full text-white bg-blue-500 hover:bg-red-600 px-3 py-2 mt-5 rounded-md">
+            Delete
+        </button>
     </form>
+</div>
 {% endblock content %}
