--- a/leads/templates/leads/lead_delete.html
+++ b/leads/templates/leads/lead_delete.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <a href="{% url 'leads:lead-list' %}">Go back to all leads</a>
-    <hr/>
-    <h1>Are you sure you want to delete this lead?</h1>
-    <form method="post" action=".">
+<div class="max-w-lg mx-auto">
+    <a href="{% url 'leads:lead-list' %}">
+        Go back to all leads
+    </a>
+    <h1 class="text-4xl text-gray-800">
+        Are you sure you want to delete this lead?
+    </h1>
+    <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
+        {{ form|crispy }}
+        <button type="submit" class="w-full text-white bg-blue-500 hover:bg-red-600 px-3 py-2 rounded-md">
+            Delete
+        </button>
     </form>
+</div>
 {% endblock content %}
