--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,11 +1,26 @@
 {% extends 'base.html' %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-    <form method="post">
+<div class="max-w-lg mx-auto">
+    <form method="post" class="mt-5">
         {% csrf_token %}
-        {{ form.as_p }}
-    <button type="submit">Sign up</button>
+        {{ form|crispy }}
+        <button type="submit" class="w-full text-white bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+            Sign up
+        </button>
     </form>
+    <div class="mt-5 border-t border-gray-200 mt-5">
+        <a class="hover:text-blue-500 mt-3" href="{% url 'password_reset' %}">
+            Forgot password?
+        </a>
+    </div>
+    <div class="mt-5 border-t border-gray-200 mt-5">
+        <a class="hover:text-blue-500 mt-3" href="{% url 'login' %}">
+            Already have an account?
+        </a>
+    </div>
+</div>
 
 {%  endblock content %}
